fixed font awesome spacing

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ p i {
 }
 
 .list-group-history {
-  max-height: 160px;
+  max-height: 200px;
   margin: 0px 0px 0px 0px;
   padding: 0px;
   overflow:scroll;
